Decouple model batching and inference

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,9 @@ add_library(core OBJECT
     src/batched_model.cpp
     src/cuda_wrappers.cpp
     src/gamestate.cpp
+    src/model.cpp
     src/mcts.cpp
+    src/tensorrt_model.cpp
     src/play.cpp
 )
 target_link_libraries(core PUBLIC Folly::folly CUDA::cudart nvinfer nvonnxparser)
