Add mcts unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,10 @@ find_package(Catch2 3)
 if (Catch2_FOUND)
     add_executable(unit_tests
         test/gamestate.cpp
+        test/main.cpp
         test/mcts.cpp
     )
 
-    target_link_libraries(unit_tests PRIVATE core Catch2::Catch2WithMain)
+    target_link_libraries(unit_tests PRIVATE core Catch2::Catch2)
     target_include_directories(unit_tests PRIVATE src)
 endif()
