--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
+
 find_package(CUDAToolkit REQUIRED)
 find_package(gflags REQUIRED)
 find_package(folly REQUIRED)
