Add more folders to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ build*/
 libtorch/
 scripts/.ipynb_checkpoints
 scripts/__pycache__
+data/
+models/
+trained_models/
+.venv
 compile_commands.json
 .cache
 model.pt
