--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
-build*/
-libtorch/
-scripts/.ipynb_checkpoints
-scripts/__pycache__
-data/
-models/
-trained_models/
-.venv
-compile_commands.json
+/build*/
+/scripts/.ipynb_checkpoints
+/scripts/__pycache__
+/data/
+/models/
+/trained_models/
+/.venv
+/compile_commands.json
 .cache
-model.pt
 .cursor/
 settings.json
 ignore/
-src/gui/font.hpp
+/src/gui/font.hpp
